Update index intro paragraph

--- a/index.html
+++ b/index.html
@@ -82,10 +82,9 @@
 			<div class="row">
 				<div class="col-xs-2"></div>
 				<div class="col-xs-8 leftalign">
-					<h2 class="white">Metapolator turns any existing typeface into a skeleton font and lets users express themselves with a set of controls.
-<br><br>In the modern world typography is becoming more and more important in how we express ourselves. Typography has become and extension of who you are, not just through the words you choose, but also the way the typography can express an emotional connection to the words chosen.
-<br><br>Today, billions of people need fonts that are custom designed for themselves and their businesses.
-With the new Metapolator platform all font lovers, from children to professional type designer, can create unique typefaces within large font families by using existing fonts and controlling it with simple adjustment tools.</h2>
+					<h2 class="white">Metapolator turns any existing typeface into a parametric family system, so you can express yourself through its dials and sliders.
+<br><br>In the modern world, typography is becoming more and more important to how we each express ourselves. Typography has become an extension of who we are, not just through the words we choose, but also the way that our typography expresses the emotions in our minds.
+<br><br>Billions of people are now online and each person need fonts that are custom designed for themselves and their businesses. With the new Metapolator platform, all font lovers from children to professional type designers can create unique typefaces within large families by using existing fonts and controlling them with simple adjustment tools.</h2>
 				</div>
 				<div class="col-xs-2"></div>
 			</div>
@@ -219,521 +218,3 @@ As a web app it is built with an industry standard too: AngularJS.</p>
 	    </div> <!-- /container-fluid -->
 	 </div>
 </article>
-
-</article>
-<article id="six">
-	<div class="slide color4" >
-		<div class="container">
-			<div class="row" >
-				<div class="centered caption">
-					<img src="assets/img/pino.gif" class="img-responsive" alt="Responsive image">
-				</div>
-				</div>
-				<div >
-			</div>
-		</div>
-	</div>
-</article>
-<article id="six">
-	<div class="slide color4" >
-		<div class="container-fluid">
-			<div class="row" >
-				<div class="centered caption">
-					<img src="assets/img/04.svg" class="img-responsive" alt="Responsive image">
-					</div>
-				</div>
-				<div class="col-md-2 col-xs-1">
-			</div>
-		</div>
-	</div>
-</article>
-
-
-<article id="six">
-	<div class="slide color3">
-		<div class="container-fluid" >
-			<div class="row">
-				<div class="col-lg-2 col-xs-1"></div>
-				<div class="col-lg-8 col-xs-10"><div class="row">
-				<div class="col-md-4 white leftalign">
-					<p>The core principle of Metapolator: A typeface is a system of shapes
-and by naming the parts they can be parametrised.</p>
-				</div>
-				<div class=" col-md-4 white">
-					<p>Fonts can be seen as a system made out of parts and therefore
-we can parameterise these parts.
-How is it possible to keep a clear view of a parameterised letter shape?</p>
-				</div>
-				<div class=" col-md-4 white leftalign">
-					<p>The Metapolator solution is to make a clone of the original and
-only add a specific parameter value to each copy.
-Instead of constantly turning on and off parameter values for one
-single font, we define a set for two fonts and invented the
-metapolation parameter, which would simply travel inbetween the sets
-of font A and font B.
-We can also think of a cross fader to mix 2 turntables.</p>
-				</div></div>
-				</div>
-				<div class="col-lg-2 col-xs-1"></div>
-
-			</div>
-		</div>
-	</div>
-</article>
-
-
-<article id="seven">
-	 <div class="slide color1">
-	    <div class="container-fluid" >
-	    	<div class="row">
-	    		<div class="col-xs-12 centered" >
-	    			<h1>Interpolation vs Metapolation.</h1>
-	    		</div><!-- /col-lg-8 -->
-	    	</div><!-- /row -->
-	    </div> <!-- /container-fluid -->
-	 </div>
-</article>
-
-
-<article id="seven">
-	<div class="slide color2">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="centered caption">
-					<img src="assets/img/07.svg" class=" img-responsive" alt="Responsive image">
-				</div>
-			</div>
-		</div>
-	</div>
-</article>
-
-
-<article id="seven">
-	<div class="slide color2">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="centered caption">
-					<img src="assets/img/05.svg" class=" img-responsive" alt="Responsive image">
-				</div>
-			</div>
-		</div>
-	</div>
-</article>
-
-
-<article id="seven">
-	<div class="slide color3">
-		<div class="container-fluid" >
-			<div class="row">
-				<div class="col-lg-2 col-xs-1"></div>
-				<div class="col-lg-8 col-xs-10"><div class="row">
-				<div class="col-md-4 white leftalign">
-					<p>Cell replication with Metapolator:
-When we start using one single font, we can extrapolate to a 2nd
-replica by calculating a skeleton from the glyph outline. From the
-skeleton to the original outline, we can create new inter- and
-extrapolations.</p>
-
-				</div>
-				<div class=" col-md-4 white">
-					<p>We create new instances from masters. An instance is the position
-inbetween 2 or many master fonts. Also, masters can be created from instances.</p>
-				</div>
-				<div class=" col-md-4 white leftalign">
-					<p>As soon we have more than one master we can create children and
-siblings. The replication is not limited to Latin alphabets. In upcoming versions, a Hindi font can be created out of a Latin style, by translating parameters from one source to another.
-</p>
-				</div></div>
-				</div>
-				<div class="col-lg-2 col-xs-1"></div>
-
-			</div>
-		</div>
-	</div>
-</article>
-
-
-
-<article id="eight">
-	 <div class="slide color1">
-	    <div class="container-fluid" >
-	    	<div class="row">
-	    		<div class="col-xs-12 centered" >
-	    			<h1>From control points to pen strokes.</h1>
-	    		</div><!-- /col-lg-8 -->
-	    	</div><!-- /row -->
-	    </div> <!-- /container-fluid -->
-	 </div>
-</article>
-
-<article id="eight">
-	<div class="slide color2">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="centered caption">
-					<img src="assets/img/stroke.png" class=" img-responsive" alt="Responsive image">
-				</div>
-			</div>
-		</div>
-	</div>
-</article>
-<article id="eight">
-	<div class="slide color2">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="centered caption">
-					<img src="assets/img/12.svg" class=" img-responsive" alt="Responsive image">
-				</div>
-			</div>
-		</div>
-	</div>
-</article>
-
-<article id="eight">
-	<div class="slide color2">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="centered caption">
-					<img src="assets/img/skeleton_a.svg" class=" img-responsive" alt="Responsive image">
-				</div>
-			</div>
-		</div>
-	</div>
-</article>
-
-
-<article id="eight">
-	<div class="slide color3">
-		<div class="container-fluid" >
-			<div class="row">
-				<div class="col-lg-2 col-xs-1"></div>
-				<div class="col-lg-8 col-xs-10"><div class="row">
-				<div class="col-md-4 white leftalign">
-					<p>We believe type design should always be in the hand of the
-designer. Metapolator is NOT drawing you a shape out of nothing.</p>
-
-				</div>
-				<div class=" col-md-4 white">
-					<p>Control points AND skeletons can be accessed and interpolated in
-Metapolator, same as composits, anchor points and kerning values. </p>
-				</div>
-				<div class=" col-md-4 white leftalign">
-					<p>If we read the points of an outline in pairs, means always
-a left and an opposite right point, then you have control over the
-stroke and skeleton, means you don't need to define control points.</p>
-				</div></div>
-				</div>
-				<div class="col-lg-2 col-xs-1"></div>
-
-			</div>
-		</div>
-	</div>
-</article>
-
-
-<article id="nine">
-	 <div class="slide color1">
-	    <div class="container-fluid" >
-	    	<div class="row">
-	    		<div class="col-xs-12 centered" >
-	    			<h1>Modularity.</h1>
-	    		</div><!-- /col-lg-8 -->
-	    	</div><!-- /row -->
-	    </div> <!-- /container-fluid -->
-	 </div>
-</article>
-
-<article id="nine">
-	<div class="slide color3">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="centered caption">
-					<img src="assets/img/modular.svg" class=" img-responsive" alt="Responsive image">
-				</div>
-			</div>
-		</div>
-	</div>
-</article>
-
-<article id="nine">
-	<div class="slide color3">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="centered caption">
-					<img src="assets/img/ui.gif" class=" img-responsive" alt="Responsive image">
-				</div>
-			</div>
-		</div>
-	</div>
-</article>
-
-<article id="nine">
-	<div class="slide color4">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="centered caption">
-					<img src="assets/img/cube.png" class=" img-responsive" alt="Responsive image">
-				</div>
-			</div>
-		</div>
-	</div>
-</article>
-
-
-
-<article id="nine">
-	<div class="slide color3">
-		<div class="container-fluid" >
-			<div class="row">
-				<div class="col-lg-2 col-xs-1"></div>
-				<div class="col-lg-8 col-xs-10"><div class="row">
-				<div class="col-md-4 white leftalign">
-					<p>Metapolators modular design allows the user to create unlimited
-amount of axes and link unlimited masters to create complex
-interpolation environments. </p>
-
-				</div>
-				<div class=" col-md-4 white">
-					<p>We believe in modular synthesizers, (again here we draw a
-connection to the world of music production) which means we can use a
-stack of modules (or masters in our case) and link them in all
-possible ways.</p>
-				</div>
-				<div class=" col-md-4 white leftalign">
-					<p> Metapolator lets you construct your very own Noordzij cube.</p>
-				</div></div>
-				</div>
-				<div class="col-lg-2 col-xs-1"></div>
-
-			</div>
-		</div>
-	</div>
-</article>
-
-
-<article id="ten">
-	 <div class="slide color1">
-	    <div class="container-fluid" >
-	    	<div class="row">
-	    		<div class="col-xs-12 centered" >
-	    			<h1>Effecting the outline is bad, effecting the skeleton is awesome.</h1>
-	    		</div><!-- /col-lg-8 -->
-	    	</div><!-- /row -->
-	    </div> <!-- /container-fluid -->
-	 </div>
-</article>
-
-
-
-<article id="ten">
-	<div class="slide color4">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="centered caption">
-					<img src="assets/img/aaa.gif" class=" img-responsive" alt="Responsive image">
-				</div>
-			</div>
-		</div>
-	</div>
-</article>
-
-
-<article id="ten">
-		<div class="slide color2" >
-		<div class="container-fluid">
-			<div class="row" >
-				<div class="centered caption">
-				<img src="assets/img/xheight_sretch_new.svg" class="img-responsive" alt="Responsive image">
-				</div>
-			</div>
-		</div>
-	</div>
-</article>
-
-
-<!-- /here we need to put the dat-gui examples from index.html (metapolator.com) -->
-
-<article class="" id="eleven" ng-controller="canvasCtrl">
-    <div class="slide color4" >
-        <div class="container-fluid" ng-controller="SliderCtrl">
-            <div class="row" >
-                <div class="col-md-2 col-xs-1"></div>
-                <div class="col-md-8 col-xs-10">
-                <div class="row" ng-controller="paperjsCtrl">
-
-                    <div id="paperjsCanvas"></div>
-                    <div id="paperGlyphSlider"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-</article>
-<!-- /examples -->
-
-
-
-<article id="eleven">
-	<div class="slide color4" >
-		<div class="container-fluid" >
-			<div class="row" >
-				<div class="col-md-2 col-xs-1"></div>
-				<div class="col-md-8 col-xs-10"><div class="row">
-					<div class="col-md-4 leftalign">
-						<ul><li>creating masters from instances</li>
-						<li>duplicating masters</li>
-						<li>positioning vector points</li>
-						<li>loading 2 axes and unlimited masters </li>
-						<li>control point mode</li>
-						<li>pen mode</li>
-						<li>storage of projects</li>
-						<li>loading ufos, generating otf, ttf and new ufos</li>
-						<li>parameterisation of outline in pen mode</li></ul>
-					</div>
-					<div class=" col-md-4 ">
-						<ul><li>various metafont parameters available:</li>
-						<li>tension, shifting, slanting, serifs, vertical metrics like changing x-heigth</li>
-						<li>stroke (pen) width, glyph width, glyph spacing, font size,</li>
-						<li>stroke direction, stroke angle</li></ul>
-					</div>
-					<div class=" col-md-4  leftalign">
-						<ul><li>Command line tool:</li>
-						<li>interpolation, extrapolation</li>
-						<li>interpolation of kerning</li>
-						<li>defining unlimited axes, using unlimited masters </li>
-						<li>create 1:1 replica from original source</li></ul>
-					</div>
-				</div>
-				</div>
-				<div class="col-md-2 col-xs-1"></div>
-			</div>
-		</div>
-	</div>
-</article>
-<article id="twelve">
-	<div class="slide color1" >
-		<div class="container-fluid" >
-			<div class="row" >
-				<div class="col-sm-2 col-xs-1"></div>
-				<div class="col-sm-8 col-xs-10 leftalign">
-	    <ul class="timeline roadmap white">
-    	<li>
-    	<div class="timeline-badge">1</div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h3 class="timeline-title">3rd of April</h3>
-            </div>
-            <div class="timeline-body">
-              <p>Presentation Talk at LGM leipzig, Germany.</p>
-            </div>
-          </div>
-        </li>
-        <li>
-        <div class="timeline-badge">2</div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h3 class="timeline-title">7th of May</h3>
-            </div>
-            <div class="timeline-body">
-              <p>Seminar at Atelier National Research Typographic Nancy, France.</p>
-            </div>
-          </div>
-        </li>
-        <li>
-        <div class="timeline-badge">3</div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h3 class="timeline-title">14th of June</h3>
-            </div>
-            <div class="timeline-body">
-              <p>
-              Tag der Schrift, Zurich, Switzerland</p>
-            </div>
-          </div>
-        </li>
-        <li>
-            <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h3 class="timeline-title">Day one</h3>
-            </div>
-            <div class="timeline-body">
-              <p>Launching a beta version for users to test and explore.</p>
-            </div>
-          </div>
-        </li>
-        <li>
-            <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h3 class="timeline-title">Day two</h3>
-            </div>
-            <div class="timeline-body">
-              <p>Inviting type designers around the world to contribute.</p>
-            </div>
-          </div>
-        </li>
-            </ul>
-				</div>
-				<div class="col-sm-2 col-xs-1">
-				</div>
-			</div>
-		</div>
-		</article>
-		</div>
-
-		<div class="slide color3">
-		<article id="thirteen">
-		<div class="container-fluid">
-			<div class="row" id="unpin13">
-				<div class="col-sm-2 centered"></div>
-				<div class="col-sm-4 centered white"><h2><a href="https://plus.google.com/communities/110027004108709154749">Join us on G+</a></h2></div>
-				<div class="col-sm-4 centered white"><h2><a href="https://github.com/metapolator/">Join us on Github</a></h2></div>
-				<div class="col-sm-2 centered"></div>
-			</div>
-		</div>
-	</div>
-</article>
-
-
-<article id="thirteen">
-	<div class="slide color3">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="centered caption">
-					<img src="assets/img/logo.svg" class=" img-responsive" alt="Responsive image">
-				</div>
-			</div>
-		</div>
-	</div>
-</article>
-
-
-
-        <script src="assets/js/bootstrap.js"></script>
-        <script src="bower_components/angular/angular.min.js"></script>
-        <script src="app/js/app.js"></script>
-        <script src="app/js/instance.js"></script>
-        <script src="app/js/paper-full.js"></script>
-        <script src="app/js/dat.gui.min.js"></script>
-        <script src="app/js/opentype.js"></script>
-        <!-- Bootstrap core JavaScript
-        ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-            <script type="text/javascript">
-
-             $('#my-affix').affix({
-                offset: {
-                  top: 100
-                , bottom: function () {
-                    return (this.bottom = $('.footer').outerHeight(true))
-                  }
-                }
-            });
-
-            $('.carousel').carousel({
-              interval: 200 // in milliseconds
-            });
-
-         </script>
-
-  </body>
-</html>
