--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
 
   <nav id="affix-nav" class="sidebar col-md-4 hidden-xs">
     <ul class="nav console" data-spy="affix">
-        <li class="active"><a href="#one">Metapolator.com</a>
+        <li class="active"><a href="#one">Metapolator</a>
         <li><a href="#two">Concept</a></li>
-        <li><a href="#three">The Workflow (Click to walkthrough)</a></li>
-        <li><a href="#four">How does it works ?</a></li>
+        <li><a href="#three">Workflow (click to step through)</a></li>
+        <li><a href="#four">How does it work?</a></li>
         <li><a href="#five">The Metapolator Universe</a>
-        <li><a href="#six">Naming parts</a></li>
+        <li><a href="#six">Naming Parts</a></li>
         <li><a href="#seven">The Metapolation Method</a></li>
-        <li><a href="#eight">Strokes and points</a></li>
+        <li><a href="#eight">Strokes and Points</a></li>
         <li><a href="#nine">Modularity</a></li>
-        <li><a href="#ten">Effecting skeleton</a></li>
+        <li><a href="#ten">Effecting Strokes</a></li>
         <li><a href="#eleven">Summary</a></li>
         <li><a href="#twelve">Roadmap</a></li>
         <li><a href="#thirteen">Join Us!</a></li>
@@ -70,7 +70,7 @@
 	    <div class="container-fluid" >
 	    	<div class="row">
 	    		<div class="col-xs-12 centered" >
-	    			<h6>We need<br>fonts !</h6>
+	    			<h6>We need<br>fonts!</h6>
 	    		</div><!-- /col-lg-8 -->
 	    	</div><!-- /row -->
 	    </div> <!-- /container-fluid -->
@@ -82,9 +82,9 @@
 			<div class="row">
 				<div class="col-xs-2"></div>
 				<div class="col-xs-8 leftalign">
-					<h2 class="white">Metapolator turns any existing typeface into a parametric family system, so you can express yourself through its dials and sliders.
-<br><br>In the modern world, typography is becoming more and more important to how we each express ourselves. Typography has become an extension of who we are, not just through the words we choose, but also the way that our typography expresses the emotions in our minds.
-<br><br>Billions of people are now online and each person need fonts that are custom designed for themselves and their businesses. With the new Metapolator platform, all font lovers from children to professional type designers can create unique typefaces within large families by using existing fonts and controlling them with simple adjustment tools.</h2>
+					<h2 class="white">Metapolator turns any existing typeface into an intelligent type family system, so you can express yourself through its dials and sliders.
+<br><br>Today typography is becoming more and more important for us each to express ourselves. Typography has become an extension of who we are. Our choice of words to express the ideas in our minds is important, and so is the way that our typography expresses the emotions in our hearts.
+<br><br>Billions of people are now online and each person need fonts that are tailor-made for themselves and their businesses. With the new Metapolator platform, all font lovers from children to expert professionals can create unique typefaces within large families. Use existing fonts and control them with simple adjustment tools to turn them into the fonts you really want.</h2>
 				</div>
 				<div class="col-xs-2"></div>
 			</div>
@@ -166,28 +166,21 @@
 				<div class="col-lg-8 col-xs-10"><div class="row">
 				<div class="col-md-4 white leftalign">
 					<h3>Tools</h3>
-					<p>Type designers need a toolbox to build a single typeface out into a
-family of styles. Metapolator provides an initial set of tools for
-common processes, but it is fully extendable.</p>
-						<ul><li>spacing (tighter or looser)</li>
-						<li>weight (regular to bold, or to light)</li>
-						<li>width (normal to narrow, or extended)</li>
-						<li>x-height (increased or decreased, without distortions)</li></ul>
+					<p>Type designers need a toolbox to build a single typeface up into a family of styles. Metapolator provides an initial set of tools for
+common processes, and it is fully extendable.</p>
+						<ul>
+						<li>- spacing (tighter or looser)</li>
+						<li>- weight (regular to bold or light)</li>
+						<li>- width (normal to narrow or extended)</li>
+						<li>- x-height (increase or decrease, without distortion)</li></ul>
 				</div>
 				<div class=" col-md-4 white">
 					<h3>Workflow</h2>
-					<p>Type designers need tools that snap into their existing workflow.
-You can load any existing typeface and change it to your needs.</p>
+					<p>Type designers need tools that slide into their existing workflows. With Metapolator you can load fonts made with any traditional font editor.</p>
 				</div>
 				<div class=" col-md-4 white leftalign">
-					<h3>Standard</h3>
-					<p>The text-based and interchangeable UFO source format has become an
-industry standard.
-Metapolator imports and exports UFO fonts, to add a new link in the
-chain of font style and family creation. Curve and parameter
-calculation is using Metafont, a standard in LaTeX and mathematical
-typesetting since 1977.
-As a web app it is built with an industry standard too: AngularJS.</p>
+					<h3>Standards</h3>
+					<p>The text-based and interchangeable UFO font source format has become an industry standard. Metapolator imports and exports UFOs, releasing a new animal into the ecosystem of UFO tools. Its adjustments are described in Metafont, a programming language that has been a standard in the LaTeX and mathematical typesetting world since 1977. The calculations are done with Metapost. As a web application it is built with an industry standard too: AngularJS.</p>
 				</div></div>
 				</div>
 				<div class="col-lg-2 col-xs-1"></div>
