--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ common processes, and it is fully extendable.</p>
 	<div class="slide color3" >
 		<div class="container-fluid">
 				<div class="centered caption">
-					<img src="assets/img/muniverse_globe_w.svg" class="img-responsive" alt="Responsive image">
+					<img src="assets/img/muniverse_globe_w.svg" class="img-responsive" alt="A huge family of 'a' glyphs">
 				</div>
 		</div>
 	</div>
@@ -205,9 +205,513 @@ common processes, and it is fully extendable.</p>
 	    <div class="container-fluid" >
 	    	<div class="row">
 	    		<div class="col-xs-12 centered" >
-	    			<h1>If you can name it you can control it.</h1>
+	    			<h1>If you can name it, you can control it.</h1>
 	    		</div><!-- /col-lg-8 -->
 	    	</div><!-- /row -->
 	    </div> <!-- /container-fluid -->
 	 </div>
 </article>
+
+
+</article>
+<article id="six">
+	<div class="slide color4" >
+		<div class="container">
+			<div class="row" >
+				<div class="centered caption">
+					<img src="assets/img/pino.gif" class="img-responsive" alt="Responsive image">
+				</div>
+				</div>
+				<div >
+			</div>
+		</div>
+	</div>
+</article>
+<article id="six">
+	<div class="slide color4" >
+		<div class="container-fluid">
+			<div class="row" >
+				<div class="centered caption">
+					<img src="assets/img/04.svg" class="img-responsive" alt="Responsive image">
+					</div>
+				</div>
+				<div class="col-md-2 col-xs-1">
+			</div>
+		</div>
+	</div>
+</article>
+
+
+<article id="six">
+	<div class="slide color3">
+		<div class="container-fluid" >
+			<div class="row">
+				<div class="col-lg-2 col-xs-1"></div>
+				<div class="col-lg-8 col-xs-10"><div class="row">
+				<div class="col-md-4 white leftalign">
+					<p>The core principle of Metapolator: Typefaces are systems of shapes,
+and by naming the parts we can control the system.</p>
+				</div>
+				<div class=" col-md-4 white">
+					<p>How is it possible to keep a clear understanding of a parameterised letter shape?</p>
+				</div>
+				<div class=" col-md-4 white leftalign">
+					<p>The Metapolator solution is to make copies of the original, and add specific parameter values to each copy. Then, instead of constantly switching on and off parameter values for one
+single meta-font, we select a pair of fonts and set the metapolation parameter, which simply travels inbetween font A and font B. Its just like a cross-fader that mixes 2 turntables.</p>
+				</div></div>
+				</div>
+				<div class="col-lg-2 col-xs-1"></div>
+
+			</div>
+		</div>
+	</div>
+</article>
+
+
+<article id="seven">
+	 <div class="slide color1">
+	    <div class="container-fluid" >
+	    	<div class="row">
+	    		<div class="col-xs-12 centered" >
+	    			<h1>Interpolation vs Metapolation</h1>
+	    		</div><!-- /col-lg-8 -->
+	    	</div><!-- /row -->
+	    </div> <!-- /container-fluid -->
+	 </div>
+</article>
+
+
+<article id="seven">
+	<div class="slide color2">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="centered caption">
+					<img src="assets/img/07.svg" class=" img-responsive" alt="Responsive image">
+				</div>
+			</div>
+		</div>
+	</div>
+</article>
+
+
+<article id="seven">
+	<div class="slide color2">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="centered caption">
+					<img src="assets/img/05.svg" class=" img-responsive" alt="Responsive image">
+				</div>
+			</div>
+		</div>
+	</div>
+</article>
+
+
+<article id="seven">
+	<div class="slide color3">
+		<div class="container-fluid" >
+			<div class="row">
+				<div class="col-lg-2 col-xs-1"></div>
+				<div class="col-lg-8 col-xs-10"><div class="row">
+				<div class="col-md-4 white leftalign">
+					<p>Cell replication with Metapolator: When we start using one single font, we can extrapolate to a 2nd replica by calculating a stroke from the glyph outline. From the stroke to the original outline, we can create new interpolations and extrapolations.</p>
+
+				</div>
+				<div class=" col-md-4 white">
+					<p>We create new instances from masters. An instance is located between 2 or more masters. Masters can be created from instances, too.</p>
+				</div>
+				<div class=" col-md-4 white leftalign">
+					<p>As soon we have more than one master, we can create children and
+siblings. None of this is limited to Latin alphabets. We expect that Devanagari fonts can be matched with Latin ones by translating parameters from one to another.</p>
+				</div></div>
+				</div>
+				<div class="col-lg-2 col-xs-1"></div>
+
+			</div>
+		</div>
+	</div>
+</article>
+
+
+
+<article id="eight">
+	 <div class="slide color1">
+	    <div class="container-fluid" >
+	    	<div class="row">
+	    		<div class="col-xs-12 centered" >
+	    			<h1>From control points to pen strokes</h1>
+	    		</div><!-- /col-lg-8 -->
+	    	</div><!-- /row -->
+	    </div> <!-- /container-fluid -->
+	 </div>
+</article>
+
+<article id="eight">
+	<div class="slide color2">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="centered caption">
+					<img src="assets/img/stroke.png" class=" img-responsive" alt="Responsive image">
+				</div>
+			</div>
+		</div>
+	</div>
+</article>
+<article id="eight">
+	<div class="slide color2">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="centered caption">
+					<img src="assets/img/12.svg" class=" img-responsive" alt="Responsive image">
+				</div>
+			</div>
+		</div>
+	</div>
+</article>
+
+<article id="eight">
+	<div class="slide color2">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="centered caption">
+					<img src="assets/img/skeleton_a.svg" class=" img-responsive" alt="Responsive image">
+				</div>
+			</div>
+		</div>
+	</div>
+</article>
+
+
+<article id="eight">
+	<div class="slide color3">
+		<div class="container-fluid" >
+			<div class="row">
+				<div class="col-lg-2 col-xs-1"></div>
+				<div class="col-lg-8 col-xs-10"><div class="row">
+				<div class="col-md-4 white leftalign">
+					<p>We believe type design should always be in the hands of the
+designer. Metapolator is NOT drawing shapes out of nothing.</p>
+
+				</div>
+				<div class=" col-md-4 white">
+					<p>Control points can be accessed and interpolated in
+Metapolator, along with composites, anchor points and kerning values. </p>
+				</div>
+				<div class=" col-md-4 white leftalign">
+					<p>Additionally, if Metapolator sees that all the points in a contour are in pairs, with a point opposite each point, then you can control this contour as a stroke. This gives you finer control over control bezier control points.</p>
+				</div></div>
+				</div>
+				<div class="col-lg-2 col-xs-1"></div>
+
+			</div>
+		</div>
+	</div>
+</article>
+
+
+<article id="nine">
+	 <div class="slide color1">
+	    <div class="container-fluid" >
+	    	<div class="row">
+	    		<div class="col-xs-12 centered" >
+	    			<h1>Modularity</h1>
+	    		</div><!-- /col-lg-8 -->
+	    	</div><!-- /row -->
+	    </div> <!-- /container-fluid -->
+	 </div>
+</article>
+
+<article id="nine">
+	<div class="slide color3">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="centered caption">
+					<img src="assets/img/modular.svg" class=" img-responsive" alt="Responsive image">
+				</div>
+			</div>
+		</div>
+	</div>
+</article>
+
+<article id="nine">
+	<div class="slide color3">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="centered caption">
+					<img src="assets/img/ui.gif" class=" img-responsive" alt="Responsive image">
+				</div>
+			</div>
+		</div>
+	</div>
+</article>
+
+<article id="nine">
+	<div class="slide color4">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="centered caption">
+					<img src="assets/img/cube.png" class=" img-responsive" alt="Responsive image">
+				</div>
+			</div>
+		</div>
+	</div>
+</article>
+
+
+
+<article id="nine">
+	<div class="slide color3">
+		<div class="container-fluid" >
+			<div class="row">
+				<div class="col-lg-2 col-xs-1"></div>
+				<div class="col-lg-8 col-xs-10"><div class="row">
+				<div class="col-md-4 white leftalign">
+					<p>Metapolator has a modular design that allows you to create unlimited
+amounts of axes, and link unlimited masters together into complex interpolation environments.</p>
+
+				</div>
+				<div class=" col-md-4 white">
+					<p>Again drawing a connection to the world of music productio, consider modular synthesizers, where stacks of modules (or masters, in our case) are linked in all possible ways.</p>
+				</div>
+				<div class=" col-md-4 white leftalign">
+					<p>Metapolator lets you construct your very own Noordzij cubes.</p>
+				</div></div>
+				</div>
+				<div class="col-lg-2 col-xs-1"></div>
+
+			</div>
+		</div>
+	</div>
+</article>
+
+
+<article id="ten">
+	 <div class="slide color1">
+	    <div class="container-fluid" >
+	    	<div class="row">
+	    		<div class="col-xs-12 centered" >
+	    			<h1>Effecting the outline is bad, effecting the stroke is awesome</h1>
+	    		</div><!-- /col-lg-8 -->
+	    	</div><!-- /row -->
+	    </div> <!-- /container-fluid -->
+	 </div>
+</article>
+
+
+
+<article id="ten">
+	<div class="slide color4">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="centered caption">
+					<img src="assets/img/aaa.gif" class=" img-responsive" alt="Responsive image">
+				</div>
+			</div>
+		</div>
+	</div>
+</article>
+
+
+<article id="ten">
+		<div class="slide color2" >
+		<div class="container-fluid">
+			<div class="row" >
+				<div class="centered caption">
+				<img src="assets/img/xheight_sretch_new.svg" class="img-responsive" alt="Responsive image">
+				</div>
+			</div>
+		</div>
+	</div>
+</article>
+
+
+<!-- /here we need to put the dat-gui examples from index.html (metapolator.com) -->
+
+<article class="" id="eleven" ng-controller="canvasCtrl">
+    <div class="slide color4" >
+        <div class="container-fluid" ng-controller="SliderCtrl">
+            <div class="row" >
+                <div class="col-md-2 col-xs-1"></div>
+                <div class="col-md-8 col-xs-10">
+                <div class="row" ng-controller="paperjsCtrl">
+
+                    <div id="paperjsCanvas"></div>
+                    <div id="paperGlyphSlider"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</article>
+<!-- /examples -->
+
+
+
+<article id="eleven">
+	<div class="slide color4" >
+		<div class="container-fluid" >
+			<div class="row" >
+				<div class="col-md-2 col-xs-1"></div>
+				<div class="col-md-8 col-xs-10"><div class="row">
+					<div class="col-md-4 leftalign">
+						<ul>
+						<li>Core Functionality:</li>
+						<li>- creating masters from instances</li>
+						<li>- duplicating masters</li>
+						<li>- positioning on-curve points</li>
+						<li>- loading unlimited masters and axes </li>
+						<li>- control-point mode for parameterised outlines</li>
+						<li>- pen mode for parameterised strokes</li>
+						<li>- storage of projects</li>
+						<li>- importing UFOs, exporting UFOs plus OTF and TTF</li>
+					</div>
+					<div class=" col-md-4 ">
+						<ul>
+						<li>Metafont Parameters Available:</li>
+						<li>- tension, shifting, slanting, serifs, vertical metrics (including x-height</li>
+						<li>- stroke (pen) width, stroke direction, stroke angle</li>
+						<li>- glyph width, glyph spacing, font size</li>
+						</ul>
+					</div>
+					<div class=" col-md-4  leftalign">
+						<ul>
+						<li>Command Line Tool:</li>
+						<li>- interpolation, extrapolation of outlines</li>
+						<li>- full kerning</li>
+						<li>- define unlimited axes and masters </li>
+						<li>- replicate instances from other interpolation tools, 1:1</li></ul>
+					</div>
+				</div>
+				</div>
+				<div class="col-md-2 col-xs-1"></div>
+			</div>
+		</div>
+	</div>
+</article>
+<article id="twelve">
+	<div class="slide color1" >
+		<div class="container-fluid" >
+			<div class="row" >
+				<div class="col-sm-2 col-xs-1"></div>
+				<div class="col-sm-8 col-xs-10 leftalign">
+	    <ul class="timeline roadmap white">
+    	<li>
+    	<div class="timeline-badge">1</div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h3 class="timeline-title">3rd of April, 2014</h3>
+            </div>
+            <div class="timeline-body">
+              <p>Presentation at Libre Graphics Meeting, Leipzig, Germany</p>
+            </div>
+          </div>
+        </li>
+        <li>
+        <div class="timeline-badge">2</div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h3 class="timeline-title">7th of May, 2014</h3>
+            </div>
+            <div class="timeline-body">
+              <p>Seminar at Atelier National Research Typographic, Nancy, France</p>
+            </div>
+          </div>
+        </li>
+        <li>
+        <div class="timeline-badge">3</div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h3 class="timeline-title">14th of June, 2014</h3>
+            </div>
+            <div class="timeline-body">
+              <p>
+              Presentation at Tag der Schrift, Zurich, Switzerland</p>
+            </div>
+          </div>
+        </li>
+        <li>
+            <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h3 class="timeline-title">Release Date: Beta</h3>
+            </div>
+            <div class="timeline-body">
+              <p>Launching a beta version for brave users to test and explore</p>
+            </div>
+          </div>
+        </li>
+        <li>
+            <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h3 class="timeline-title">Release Date: Alpha</h3>
+            </div>
+            <div class="timeline-body">
+              <p>Inviting type designers around the world to review, use and contribute</p>
+            </div>
+          </div>
+        </li>
+            </ul>
+				</div>
+				<div class="col-sm-2 col-xs-1">
+				</div>
+			</div>
+		</div>
+		</article>
+		</div>
+
+		<div class="slide color3">
+		<article id="thirteen">
+		<div class="container-fluid">
+			<div class="row" id="unpin13">
+				<div class="col-sm-2 centered"></div>
+				<div class="col-sm-4 centered white"><h2><a href="https://plus.google.com/communities/110027004108709154749">Join our community on Google+</a></h2></div>
+				<div class="col-sm-4 centered white"><h2><a href="https://github.com/metapolator/">Join our developers on Github</a></h2></div>
+				<div class="col-sm-2 centered"></div>
+			</div>
+		</div>
+	</div>
+</article>
+
+
+<article id="thirteen">
+	<div class="slide color3">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="centered caption">
+					<img src="assets/img/logo.svg" class=" img-responsive" alt="Responsive image">
+				</div>
+			</div>
+		</div>
+	</div>
+</article>
+
+
+
+        <script src="assets/js/bootstrap.js"></script>
+        <script src="bower_components/angular/angular.min.js"></script>
+        <script src="app/js/app.js"></script>
+        <script src="app/js/instance.js"></script>
+        <script src="app/js/paper-full.js"></script>
+        <script src="app/js/dat.gui.min.js"></script>
+        <script src="app/js/opentype.js"></script>
+        <!-- Bootstrap core JavaScript
+        ================================================== -->
+        <!-- Placed at the end of the document so the pages load faster -->
+            <script type="text/javascript">
+
+             $('#my-affix').affix({
+                offset: {
+                  top: 100
+                , bottom: function () {
+                    return (this.bottom = $('.footer').outerHeight(true))
+                  }
+                }
+            });
+
+            $('.carousel').carousel({
+              interval: 200 // in milliseconds
+            });
+
+         </script>
+
+  </body>
+</html>
