--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ single meta-font, we select a pair of fonts and set the metapolation parameter, 
 	    <div class="container-fluid" >
 	    	<div class="row">
 	    		<div class="col-xs-12 centered" >
-	    			<h1>Interpolation vs Metapolation</h1>
+	    			<h1>Interpolation × Metapolation</h1>
 	    		</div><!-- /col-lg-8 -->
 	    	</div><!-- /row -->
 	    </div> <!-- /container-fluid -->
